# ROSChapter6_ws

src/learn_message_filter_cpp/: CMakeLists.txt  package.xml
src/learn_message_filter_cpp/src/: timesync_test.cpp
src/patrol_interfaces/: CMakeLists.txt  package.xml
src/yuen_app/: package.xml  setup.cfg  setup.py
src/yuen_app_clang/: CMakeLists.txt  package.xml
src/yuen_app_clang/src/: goal_to_pose.cpp  way_points_follow.cpp
src/yuen_bot/: CMakeLists.txt  README.md  package.xml
src/yuen_bot/config/: display_yuenbot_model.rviz  fishbot_ros2_controller.yaml
src/yuen_bot/launch/: display_robot.launch.py  gazebo_sim.launch.py
src/yuen_bot/urdf/demobot/: sex_slave_LiXinlan.gv  yuenBot.urdf  yuenBot.xacro
src/yuen_bot/urdf/fishbot/: base.urdf.xacro  fishbot.ros2_control.xacro  fishbot.urdf.xacro  inertia.urdf.xacro
src/yuen_bot/world/: custom_room.world
src/yuen_bot/world/room/: model.sdf
src/yuen_navi/: CMakeLists.txt  package.xml
src/yuen_navi/config/: nav2_params.yaml
src/yuen_navi/launch/: navi2.launch.py
src/yuen_navi/maps/: room.pgm  room.yaml
src/yuen_patrol/: package.xml  setup.cfg  setup.py
src/yuen_patrol/config/: patrol_config.yaml
src/yuen_patrol/launch/: autopatrol.launch.py
src/yuen_patrol/yuen_patrol/: patrol_node.py  speaker.py
src/yuen_plugin_controller/: CMakeLists.txt  controller_plugin.xml  package.xml
src/yuen_plugin_controller/src/: yuen_plugin_controller.cpp
src/yuen_plugin_navi/: CMakeLists.txt  package.xml  planner_plugin.xml
src/yuen_plugin_navi/src/: yuen_plugin_navi.cpp
(+9 files in other folders)
